# bollama

./: .gitignore  Dockerfile  LICENSE  README.md  TODO.md  bollama.cabal  buildStatic.sh  cabal.project  defaultAttrs.csv  run.sh  updateReadme.sh
.github/workflows/: release.yml
app/: Main.hs
src/: App.hs  Config.hs  Core.hs  Draw.hs  Events.hs  Help.hs  Logging.hs  Messages.hs  Storage.hs  Theme.hs  Utils.hs
src/Storage/: Store.hs  StoreImpl.hs
src/Widgets/: Common.hs  ErrorMessage.hs  PopupConfirm.hs  PopupContextMenu.hs  PopupEditChat.hs  PopupExport.hs  PopupHelp.hs  PopupPrompt.hs  TabChat.hs  TabColours.hs  TabLog.hs  TabModels.hs  TabPs.hs
